--- a/JSF/Roomies/WebContent/resources/css/styles.css
+++ b/JSF/Roomies/WebContent/resources/css/styles.css
@@ -2,10 +2,29 @@
 	margin:0px;
 	padding: 0px;
 }
+h1{
+	color: red;
+	text-align: center;
+}
 .logo{
 	display: block;
+	width: 25vh;
+	height: 25vh;
     margin-left: auto;
     margin-right: auto 
 }
-#login{
+
+.btns-2{
+	width: 100%;
+	margin-top: 3vh;
+}
+.btns-2 > *{
+	margin: 0px;
+}
+.size-l{
+	width: 70% !important;
+	margin-right: 1% !important;
+}
+.size-m{
+	width: 29% !important;
 }
