--- a/JSF/Roomies/WebContent/resources/css/styles.css
+++ b/JSF/Roomies/WebContent/resources/css/styles.css
@@ -34,3 +34,7 @@ hr{
 	border: 0px;
 	border-radius: 20px;
 }
+
+input:-webkit-autofill {
+    -webkit-box-shadow: 0 0 0px 1000px white inset !important;
+}
