--- a/JSF/Roomies/WebContent/resources/css/styles.css
+++ b/JSF/Roomies/WebContent/resources/css/styles.css
@@ -75,3 +75,8 @@
 input:-webkit-autofill {
 	-webkit-box-shadow: 0 0 0px 1000px white inset !important;
 }
+.userimage {
+	border-radius: 50% !important;
+	width: 20vw !important;
+	height: auto;
+}
