--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -20,7 +20,7 @@
            
     </ion-list>
 
-    <ion-button shape="round" expand="block" color="dark">Login</ion-button>
+    <ion-button shape="round" expand="block" color="dark" routerLink="/home">Login</ion-button>
 
     <ion-button shape="round" expand="block" color="dark" routerLink="/register">Registrar</ion-button>
     
